[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Imamov_FN <Imamov_FN@surgutneftegas.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
